<resources>
    <string name="app_name" translatable="false">Diet app</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="nav_header_title" translatable="false">Diet App</string>

    <string name="language">Language</string>
    <string name="language_using">English</string>
    <string name="language_using_description">The diet app is using the phone default language.</string>
    <string name="theme">Theme</string>
    <string name="theme_change">Dark mode</string>
    <string name="dark_on">Dark mode on</string>
    <string name="dark_off">Dark mode off</string>


    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_diet">Diet</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_food">Food</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_nutrition">Nutrition</string>

    <string name="insert">Insert</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="food_mandatory">Write the name of the food</string>
    <string name="food_type_mandatory">Select the food type</string>
    <string name="food_kcal_mandatory">Write the kcal amount of the food</string>
    <string name="food_protein_mandatory">Write the protein amount of the food</string>
    <string name="food_fat_mandatory">Write the fat amount of the food</string>
    <string name="food_carbohydrate_mandatory">Write the carbohydrate amount of the food</string>

    <string name="success_insert_food">Food inserted successfully.</string>
    <string name="error_inserting_food">Error inserting food.</string>
    <string name="success_delete_food">Food deleted successfully.</string>
    <string name="error_delete_food">Error deleting food.</string>
    <string name="delete_food_confirmation">Do you want to delete this food?</string>

    <string name="insert_food_label">New food</string>
    <string name="delete_food_label">Delete food</string>
    <string name="modify_food_label">Modify food</string>

    <string name="Weight">Weight:</string>
    <string name="Height">Height:</string>
    <string name="Age">Age:</string>
    <string name="Activity">Activity:</string>
    <string name="Result">Result:</string>
    <string name="ActivityDescription1">Sedentary</string>
    <string name="ActivityDescription2">1 to 3 days per week</string>
    <string name="ActivityDescription3">3 to 5 days a week</string>
    <string name="ActivityDescription4">6 to 7 days a week</string>
    <string name="ActivityDescription5">2 times a day</string>


    <string name="Food">Food</string>
    <string name="FoodName">Name:</string>
    <string name="FoodName2">Chicken breast</string>
    <string name="FoodType">Type:</string>
    <string name="FoodType2">Protein</string>
    <string name="FoodKcal" translatable="false">Kcal:</string>
    <string name="FoodProtein">Protein:</string>
    <string name="FoodFat">Fat:</string>
    <string name="FoodCarbohydrate">Carbs:</string>

    <string name="Progress">Progress</string>
    <string name="Period">Period:</string>
    <string-array name="Period">
        <item>Weight Loss</item>
        <item>Weight Gain</item>
        <item>Weight Maintenance</item>
    </string-array>
    <string name="Date">Date:</string>
    <string name="success_insert_progress">Progress inserted successfully.</string>
    <string name="error_inserting_progress">Error inserting progress.</string>
    <string name="progress_period_mandatory">Select the progress period.</string>
    <string name="progress_weight_mandatory">Write the progress weight.</string>

    <string name="summary">Summary</string>
    <string name="kcal_intake">Kcal intake:</string>
    <string name="kcal_consumed">Kcal consumed:</string>
    <string name="kcal_lack">Kcal lack:</string>
    <string name="nutrition">Nutrition</string>

    <string name="title_activity_login">Login Activity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="FoodCarbohydrateDescription">" "</string>

</resources>