<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
// Add the buttons on the side bar
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_baseline_pie_chart_24"
            android:title="@string/menu_diet" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_baseline_food"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_baseline_insert_chart_24"
            android:title="@string/menu_progress" />
        <item
            android:id="@+id/nav_InsertModifyFood"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Teste Insert/Modify" />
        <item
            android:id="@+id/nav_delete_food"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Teste Delete" />

    </group>
    // Add the Settings button on the side bar with a separation from the others
    <item android:title="">
    <menu>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings"/>
    </menu>
</item>
</menu>