<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.HomeFragment">

    <!--Left Components-->
    <TextView
        android:id="@+id/textViewSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewKcalIntake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/kcal_intake"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewSummary"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSummary" />

    <TextView
        android:id="@+id/textViewKcalConsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/kcal_consumed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewKcalIntake"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKcalIntake" />

    <TextView
        android:id="@+id/textViewKcalLack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/kcal_lack"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewKcalConsumed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKcalConsumed" />

    <!--Right Components-->
    <TextView
        android:id="@+id/textViewKcalIntake2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewKcalIntake"
        app:layout_constraintStart_toEndOf="@+id/textViewKcalIntake"
        app:layout_constraintTop_toTopOf="@+id/textViewKcalIntake" />

    <TextView
        android:id="@+id/textViewKcalConsumed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewKcalConsumed"
        app:layout_constraintStart_toEndOf="@+id/textViewKcalConsumed"
        app:layout_constraintTop_toTopOf="@+id/textViewKcalConsumed" />

    <TextView
        android:id="@+id/textViewKcalLack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewKcalLack"
        app:layout_constraintStart_toEndOf="@+id/textViewKcalLack"
        app:layout_constraintTop_toTopOf="@+id/textViewKcalLack" />



</androidx.constraintlayout.widget.ConstraintLayout>