<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.progress.ProgressFragment">

    <!--Left Components-->
    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Progress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWeightProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewProgress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProgress" />

    <TextView
        android:id="@+id/textViewPeriodProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Period"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewWeightProgress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeightProgress" />

    <TextView
        android:id="@+id/textViewDateProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewPeriodProgress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPeriodProgress" />

    <!--Right Components-->
    <EditText
        android:id="@+id/editTextWeightProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:hint="65"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWeightProgress"
        app:layout_constraintStart_toEndOf="@+id/textViewWeightProgress"
        app:layout_constraintTop_toTopOf="@+id/textViewWeightProgress" />

    <Spinner
        android:id="@+id/spinnerPeriodProgress"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:entries="@array/Period"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPeriodProgress"
        app:layout_constraintEnd_toEndOf="@+id/editTextWeightProgress"
        app:layout_constraintTop_toTopOf="@+id/textViewPeriodProgress"
        app:layout_constraintVertical_bias="0.0" />

    <CalendarView
        android:id="@+id/calendarViewProgress"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginTop="8dp"
        android:background="#E8EAF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>